@@ -14,8 +14,8 @@ setup(name="sauna.reload",
         "Programming Language :: Python",
         ],
       keywords="plone reload zope2 restart developer",
-      author="Esa-Matti Suuronen",
-      author_email="esa-matti@suuronen.org",
+      author="Asko Soukka",
+      author_email="asko.soukka@iki.fi",
       url="http://github.com/collective/sauna.reload",
       license="ZPL",
       packages=find_packages(exclude=["ez_setup"]),
